--- a/deneme.html
+++ b/deneme.html
@@ -2,18 +2,18 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8">
-  <title>Gelişmiş Header Düzeltici</title>
+  <title>Header Düzeltici</title>
   <style>
-    body { font-family: Arial; padding: 20px; }
+    body { font-family: Arial, sans-serif; padding: 20px; }
     textarea, pre { width: 100%; margin-top: 10px; }
     textarea { height: 200px; }
     button { margin-top: 10px; padding: 10px 20px; font-size: 16px; }
-    pre { background: #f0f0f0; padding: 10px; white-space: pre-wrap; word-break: break-word; }
+    pre { background: #f0f0f0; padding: 10px; white-space: pre-wrap; word-wrap: break-word; }
   </style>
 </head>
 <body>
 
-<h2>Bozuk Header'ları Akıllı Şekilde Düzelt</h2>
+<h2>Header'ları Düzelt</h2>
 <textarea id="inputArea" placeholder="Bozuk header'ları buraya yapıştır..."></textarea>
 <button onclick="fixHeaders()">Dönüştür</button>
 <h3>Düzenlenmiş Header'lar:</h3>
@@ -28,26 +28,26 @@ function fixHeaders() {
 
   for (let line of lines) {
     line = line.trim();
-    if (!line) continue;
+    if (!line) continue; // Boş satırları geç
 
-    // Eğer satır sadece "xxx:" şeklindeyse key'dir
-    if (/^[^:]+:\s*$/.test(line)) {
+    // Eğer satır bir key ise
+    if (line.includes(":") && !line.startsWith(" ")) {
+      // Eğer önceki key-value varsa, onu ekle
       if (currentKey) {
         result.push(`${currentKey}: ${currentValue}`);
       }
-      currentKey = line.replace(":", "").toLowerCase();
-      currentValue = "";
+
+      // Yeni key-value'yu ayır
+      const [key, ...rest] = line.split(":");
+      currentKey = key.trim().toLowerCase();  // Key'i küçük harfe dönüştür
+      currentValue = rest.join(":").trim();  // Value'yu al
     } else {
-      // Satır bir key değil, value kısmı
-      if (currentValue) {
-        currentValue += " " + line;
-      } else {
-        currentValue = line;
-      }
+      // Eğer line bir value ise, onu currentValue'ya ekle
+      currentValue += " " + line.trim();
     }
   }
 
-  // Son key-value çifti için
+  // Son key-value çiftini de ekle
   if (currentKey) {
     result.push(`${currentKey}: ${currentValue}`);
   }
