--- a/test.html
+++ b/test.html
@@ -27,15 +27,15 @@
 
 <script>
 function generateBlock() {
-  const url = document.getElementById("url").value;
-  const fingerprint = document.getElementById("fingerprint").value;
+  const url = document.getElementById("url").value.trim();
+  const fingerprint = document.getElementById("fingerprint").value.trim();
 
   const block = `BLOCK:HttpRequest
   url = "${url}"
   method = POST
   customHeaders = {("content-type", "application/json"), ("finger_print", "${fingerprint}"), ("origin", "https://favoribahis587.com"), ("priority", "u=1, i"), ("referer", "https://favoribahis587.com/tr"), ("sec-ch-ua", "\\"Google Chrome\\";v=\\"135\\", \\"Not-A.Brand\\";v=\\"8\\", \\"Chromium\\";v=\\"135\\""), ("sec-ch-ua-mobile", "?0"), ("sec-ch-ua-platform", "\\"Windows\\""), ("sec-fetch-dest", "empty"), ("sec-fetch-mode", "cors"), ("sec-fetch-site", "same-origin"), ("user-agent", "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/135.0.0.0 Safari/537.36")}
   TYPE:STANDARD
-  $\`{"requestBody":{"username":"<input.USER>","email":null,"phone":null,"keepLoggedIn":null,"password":"<input.PASS>","loginType":1,"fingerPrint":"${fingerprint}"},"languageId":1,"device":"d"}\`
+  "$"{\\"requestBody\\":{\\"username\\":\\"<input.USER>\\",\\"email\\":null,\\"phone\\":null,\\"keepLoggedIn\\":null,\\"password\\":\\"<input.PASS>\\",\\"loginType\\":1,\\"fingerPrint\\":\\"${fingerprint}\\"},\\"languageId\\":1,\\"device\\":\\"d\\"}"
   "application/json"
 ENDBLOCK
 
