--- a/kural.html
+++ b/kural.html
@@ -1,319 +1,47 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FFA Maç Kuralları</title>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Rubik+Mono+One&display=swap');
+// server.js
+const WebSocket = require('ws');
 
-        body {
-    margin: 0;
-    font-family: 'Press Start 2P', cursive;
-    background: radial-gradient(circle, #3b0764, #1e0035);
-    color: #e2e8f0;
-    overflow-x: hidden;
-    padding-bottom: 30px; /* Alt kısmı ekle, footer'dan sonra kaybolmasın */
-}
+const wss = new WebSocket.Server({ port: 3000 });
 
-h1 {
-    text-align: center;
-    font-size: 3rem; /* Küçültülmüş yazı boyutu */
-    margin-top: 20px;
-    color: #ff79c6;
-    animation: neonGlow 3s infinite alternate;
-}
+let publisher = null;
+let viewer = null;
 
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
-    background: rgba(0, 0, 0, 0.8);
-    border: 2px solid #ff79c6;
-    border-radius: 15px;
-    box-shadow: 0 0 15px #ff79c6;
-}
+wss.on('connection', function connection(ws) {
+  ws.on('message', function incoming(message) {
+    const data = JSON.parse(message);
 
-.rule {
-    background: rgba(60, 0, 85, 0.9);
-    border: 2px solid #bd93f9;
-    padding: 15px; /* Daha küçük padding */
-    border-radius: 10px;
-    margin-bottom: 15px; /* Daha küçük margin */
-    transition: transform 0.3s, box-shadow 0.3s;
-    position: relative;
-    overflow: hidden; /* Taşmaları engeller */
-}
-
-.rule:hover {
-    transform: rotate(-1deg) scale(1.05);
-    box-shadow: 0 0 20px #ff79c6;
-}
-
-.rule h2 {
-    margin: 0;
-    color: #ffb86c;
-    font-size: 1.6rem; /* Küçük başlık boyutu */
-    text-transform: uppercase;
-}
-
-.rule p {
-    margin: 10px 0 0;
-    font-size: 1rem; /* Küçük metin boyutu */
-    line-height: 1.4; /* Daha sık satır aralığı */
-    overflow-wrap: break-word; /* Uzun kelimeleri kırarak düzenler */
-    text-overflow: ellipsis; /* Taşan metinler için üç nokta kullanır */
-}
-
-.rule-number {
-    position: absolute;
-    top: -15px;
-    left: -15px;
-    background: #ff5555;
-    color: #fff;
-    font-size: 1rem; /* Küçük yazı boyutu */
-    padding: 10px;
-    border-radius: 50%;
-    box-shadow: 0 0 10px #ff5555;
-}
-
-footer {
-    text-align: center;
-    padding: 15px 0;
-    background: #1e0035;
-    color: #8be9fd;
-    font-size: 1rem;
-    border-top: 2px solid #bd93f9;
-}
-
-/* Responsive tasarım: Küçük ekranlar için daha küçük boyutlar */
-@media screen and (max-width: 768px) {
-    h1 {
-        font-size: 2.5rem; /* Başlık boyutunu küçült */
+    if (data.type === 'publisher') {
+      publisher = ws;
+      ws.role = 'publisher';
+      console.log('Publisher connected');
     }
 
-    .rule h2 {
-        font-size: 1.4rem; /* Küçük ekranlar için başlık boyutu */
+    if (data.type === 'viewer') {
+      viewer = ws;
+      ws.role = 'viewer';
+      console.log('Viewer connected');
     }
 
-    .rule p {
-        font-size: 0.9rem; /* Küçük ekranlar için metin boyutu */
+    // Mesajları diğer tarafa gönder
+    if (data.to === 'publisher' && publisher) {
+      publisher.send(JSON.stringify(data));
     }
 
-    .rule-number {
-        font-size: 0.9rem; /* Küçük ekranlarda numara boyutunu küçült */
-        padding: 8px;
+    if (data.to === 'viewer' && viewer) {
+      viewer.send(JSON.stringify(data));
     }
-}
+  });
 
-        footer {
-            text-align: center;
-            padding: 15px 0;
-            background: #1e0035;
-            color: #8be9fd;
-            font-size: 1rem;
-            border-top: 2px solid #bd93f9;
-        }
-    </style>
-</head>
-<body>
-    <h1>FFA Maç Kuralları</h1>
+  ws.on('close', () => {
+    if (ws.role === 'publisher') {
+      publisher = null;
+      console.log('Publisher disconnected');
+    }
+    if (ws.role === 'viewer') {
+      viewer = null;
+      console.log('Viewer disconnected');
+    }
+  });
+});
 
-    <div class="content">
-        <div class="rule">
-            <div class="rule-number">1</div>
-            <h2>Emergency Rule</h2>
-            <p>Eğer maçtan önce 1 saat içinde oyuncu alındıysa karşı takım 1-0 önde başlar. Eğer maç içinde emergency alınırsa karşı takıma +2 gol verilir.</p>
-        </div>
-        <div class="rule">
-            <div class="rule-number">2</div>
-            <h2>Loan Rule</h2>
-            <p>Sadece maçın kaderini değiştirmeyecek belli kişiler loan alınabilir (ticket'tan bu izni alabilirsiniz) ve her sezon takım başına ligde maksimum 2, kupada ise 1 loan alınabilir. Fazlası alınırsa karşı takıma auto verilir. (loanlar hariç)</p>
-        </div>
-        <div class="rule">
-            <div class="rule-number">3</div>
-            <h2>3. Parti Yazılım</h2>
-            <p>Clumsy, VPN, Script, FastFlag vs. yasaktır. (Roblox’un yasaklanması gibi olağan şeyler dışında)</p>
-        </div>
-        <div class="rule">
-            <div class="rule-number">4</div>
-            <h2>PB</h2>
-            <p>Eğer defans oyuncusu kendi kalecisine yerden pas atarsa ve kaleci eline alırsa 1/2'dir. Eğer 2 kere yapılırsa +1’dir.</p>
-        </div>
-        <div class="rule">
-            <div class="rule-number">6</div>
-            <h2>CK RUSH</h2>
-            <p>Korner kullanan oyuncuya rush 1/2'dir. 2. yapımında sarı kart verilir. 3. yapımında 2. sarı kart verilir.</p>
-        </div>
-
-        <div class="rule">
-            <div class="rule-number">7</div>
-            <h2>LAST</h2>
-            <p>Eğer gole giden bir oyuncuya karşı takım kayarsa (önünde başka oyuncu olmama şartıyla) +1 gol + sarı kart verilir.</p>
-        </div>
-   
-        <div class="rule">
-            <div class="rule-number">8</div>
-            <h2>Leave Ball</h2>
-            <p>Eğer rakip takımdan bir oyuncuya kayıp topu alırsanız geri bırakmak zorundasınız. Eğer dokunursanız veya 3 saniye dolmadan topu alırsanız sarı kart verilir.</p>
-        </div>
-     
-        <div class="rule">
-            <div class="rule-number">9</div>
-            <h2>Last CB</h2>
-            <p>Eğer ataktayken karşı takımın stoperine kayıp gol atarsanız, gol iptali + sarı kart verilir.</p>
-        </div>
-        <div class="rule">
-            <div class="rule-number">10</div>
-            <h2>Visu, 3x, 4x, 5x</h2>
-            <p>Bunun gibi kombinasyonlar hem şutta hem de pasta yasaktır. 1/2'dir, 2. yapılışında sarı kart verilir.</p>
-        </div>
-        <div class="rule">
-            <div class="rule-number">11</div>
-            <h2>PB</h2>
-            <p>Santrada geri pas zorunludur, cezası sarı karttır.</p>
-        </div>
-        <div class="rule">
-            <div class="rule-number">12</div>
-            <h2>Yayın</h2>
-            <p>Maça yayın açılmadan başlanamaz. Eğer rakip istemiyorsa, hostlayan takım yayını açmak zorundadır. Eğer tartışmalı bir pozisyonda clip alınmamışsa, telafisi olmaz.</p>
-        </div>
-        <div class="rule">
-            <div class="rule-number">13</div>
-            <h2>RQ Rule</h2>
-            <p>Teknik direktör komutu olmadan (değişiklik vs.), bir sebebi olmadan ayrılan oyunculara moderatör hükmüyle 1 maç ceza verilir.</p>
-        </div>
-        <div class="rule">
-            <div class="rule-number">14</div>
-            <h2>Maç Oynanması</h2>
-            <p>Her takımda en az 3 oyuncu olmak zorundadır, aksi takdirde auto verilir. Eğer karşı takım 10 dakika içinde gelmezse, bekleyen takıma auto verilir. Eğer 2 takımda gelmezse, 2 takıma da 1 puan verilir.</p>
-        </div>
-        <div class="rule">
-            <div class="rule-number">15</div>
-            <h2>Kırmızı Kart</h2>
-            <p>2 sarı kartla kırmızı kart alırsanız, maçtan çıkmak zorundasınız. Eğer hakem söyledikten sonra maçtan çıkmayıp topa dokunursanız, direkt auto verilir. Kırmızı kartın cezası 1 maçtır, lig ve kupa maçları aynı kabul edilir.</p>
-        </div>
-        <div class="rule">
-            <div class="rule-number">16</div>
-            <h2>Kaçak Oyuncu</h2>
-            <p>Ligde olmayan, takımda bulunmayan, register yapmamış, Türk olmayan bir oyuncu maçta oynarsa, auto verilir.</p>
-        </div>
-        <div class="rule">
-            <div class="rule-number">17</div>
-            <h2>TW Rule</h2>
-            <p>Eğer kaleci topu yere bırakıp başkası dokunmadan tekrar eline alırsa, sarı kart verilir.</p>
-        </div>
-        <div class="rule">
-            <div class="rule-number">18</div>
-            <h2>High Flick Rule</h2>
-            <p>2'den fazla üst üste high flick atmak yasaktır. Gol atılırsa sayılmaz, cezası sarı karttır.</p>
-        </div>
-        <div class="rule">
-            <div class="rule-number">19</div>
-            <h2>Range</h2>
-            <p>Kalecisiz oynayan rakiplere karşı box dışı vurabileceğiniz alanlar aşağıdaki gibidir;</p>
-        </div>
-        <div class="rule">
-            <div class="rule-number">20</div>
-            <h2>Boost</h2>
-            <p>Boostlar kesinlikle yasaktır. Yakalandığı anda auto + 2 maç ceza verilir. (Durability, stamina boost hariç)</p>
-        </div>
-        <div class="rule">
-            <div class="rule-number">21</div>
-            <h2>TP</h2>
-            <p>Kontra atakta teleport olup atağı engellemeye kesinlikle taviz yoktur, cezası direkt kırmızı karttır.</p>
-        </div>
-        <div class="rule">
-            <div class="rule-number">22</div>
-            <h2>Speed Glitch</h2>
-            <p>Tackle c spam glitch veya rakibin üstünden atlayıp boostlanma glitch’i yapılırsa, 1/2'dir, 2. yapılışı sarı karttır.</p>
-        </div>
-        <div class="rule">
-            <div class="rule-number">23</div>
-            <h2>Teleport Glitch</h2>
-            <p>Eğer oyunun bug’ından dolayı teleportlanmazsanız ve topa dokunursanız, direkt sarı karttır. Gol atılırsa sayılmaz.</p>
-        </div>
-        <div class="rule">
-            <div class="rule-number">24</div>
-            <h2>Bütçe</h2>
-            <p>Bütçeler Tier olarak belirlenir ve maksimum sayısı vardır. X=1, S=2, A=5, B=7, C=∞. Maçtan önce hakemin tierleri kontrol etmesi gerekir. Uyarılıp oyuncu reslemeden maça çıkılırsa, auto verilir.
-                Loan Players Bütçe hesaplamasına dahil değildir.
-                1 X Ve 1 S tier’e sahip olan takım A tier alamaz
-                Eğer takımında X tier yoksa 2 S alabilir eğer varsa 1 tane alabilir.
-                2 S olan 2 tane A alabilir
-                Sadece A alınırsa 5 tane A alınabilir
-                1 S olan maksimum 4 tane A alabilir
-                1 X olan maksimum 2 tane A alabilir. 
-                3 S olan maksimum 1 tane A alabilir.</p>
-            
-        </div>
-        <div class="rule">
-            <div class="rule-number">25</div>
-            <h2>Erken Start</h2>
-            <p>2 takımda hazır olmadan sahaya çıkan oyuncu sarı kart alır.</p>
-        </div>
-        <div class="rule">
-            <div class="rule-number">26</div>
-            <h2>Host</h2>
-            <p>Avrupa dışı host kabul edilmez.</p>
-        </div>
-        <div class="rule">
-            <div class="rule-number">27</div>
-            <h2>Time</h2>
-            <p>2 sezonda bir oyuncular arasında oylama yapılır ve 2 sezon boyunca o time kullanılır. Eğer 2 takımda kabul ederse farklı timeda oynayabilirler, güncel 18 min.</p>
-        </div>
-        <div class="rule">
-            <div class="rule-number">28</div>
-            <h2>Register</h2>
-            <p>Player Register 1 kez yazılabilir ve maçtan yarım saat önceye kadar kesinlikle yapılmalıdır, yoksa auto verilir.</p>
-        </div>
-        <div class="rule">
-            <div class="rule-number">29</div>
-            <h2>GK Register</h2>
-            <p>GK Register yok fakat eğer lineupta GK belirtilmemişse/belirtilmişse o maç boyunca herhangi biri kaleye geçemez/kaleden çıkamaz. Eğer yapılırsa auto verilir.</p>
-        </div>
-        <div class="rule">
-            <div class="rule-number">30</div>
-            <h2>Alt Register</h2>
-            <p>Alt hesapla acil durum dışı (ban vs.) oynanması tavsiye edilmez. Eğer acil bir durum çıkarsa ve maçtan hemen önce yazılmak durumunda kalınırsa gerekçe maçın hakemine bildirilmelidir.</p>
-        </div>
-        <div class="rule">
-            <div class="rule-number">31</div>
-            <h2>PP RULE</h2>
-            <p>Eğer bir takım kendi başına karşı takıma sormadan PP yapmak istiyorsa maksimum 20 dakika PP yapabilir.</p>
-        </div>
-        <div class="rule">
-            <div class="rule-number">32</div>
-            <h2>Clear Rule</h2>
-            <p>Clear’ı oyunu sabote etmek için kullanan oyuncuya sarı kart verilir. Eğer hakem çok fazla olduğunu düşünüyorsa kırmızı kart verebilir.</p>
-        </div>
-        <div class="rule">
-            <div class="rule-number">33</div>
-            <h2>Lisans Rule</h2>
-            <p>Bir oyuncu gittiği takımda 3 maç oynamadan reslenemez. Eğer çok geçerli bir sebebi varsa ve maça çıkmamışsa fesh isteyerek reslenebilir (bütçe gibi şeyler dışında).</p>
-        </div>
-        <div class="rule">
-            <div class="rule-number">34</div>
-            <h2>Sarı Kart Sınırı</h2>
-            <p>4 lig maçında sarı kart yiyen oyuncu 1 maç cezalı duruma düşer.</p>
-        </div>
-        <div class="rule">
-            <div class="rule-number">35</div>
-            <h2>Hakem</h2>
-            <p>TPs hakeminin verdiği kartlar sayılır.</p>
-        </div>
-        <div class="rule">
-            <div class="rule-number">36</div>
-            <h2>GK Combo</h2>
-            <p>GK’da her türlü kombinasyon yasaktır. (x lmb vs.) Cezası sarı karttır.</p>
-        </div>
-    </div>
-</body>
-</html>
-    </div>
-
-    <footer>
-        <p>© 2025 FFA Lig Kuralları / discord.gg/aCyd6rdF2m</p>
-    </footer>
-</body>
-</html>
+console.log('WebSocket sinyal sunucusu 3000 portunda çalışıyor');
